pipeline/pipelines-ui/overlays/istio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-pipeline-ui
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
